Add version command, get travis to build on go 1.10

--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,6 +1,6 @@
 builds:
   - binary: eini
-    ldflags: -s -w -X=github.com/jeffutter/eini.version={{.Version}}
+    ldflags: -s -w -X=github.com/jeffutter/eini/cmd.version={{.Version}}
     env:
       - CGO_ENABLED=0
     goos:
